manifests/wpad/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wpad
  namespace: wpad
  labels:
    app: wpad
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: wpad
